--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "@astrojs/vercel": "^8.1.3",
     "@hono/node-server": "^1.14.1",
     "astro": "^5.7.2",
-    "hono": "^4.7.7"
+    "effect": "^2.0.0",
+    "hono": "^4.7.7",
+    "telegram": "^2.18.38",
+    "input": "^1.0.1",
+    "better-sqlite3": "^9.5.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
