--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,8 @@ TELEGRAM_CHANNELS=channelname1,channelname2
 
 # Optional: Path to SQLite database (default: ./data/telegram.db)
 # DB_PATH=/path/to/database.db
+
+# Cloudflare credentials for SST deployment
+# Get these from Cloudflare dashboard
+CLOUDFLARE_API_TOKEN=
+CLOUDFLARE_ACCOUNT_ID=
