--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "preview": "astro preview",
     "astro": "astro",
     "api:dev": "ts-node --esm api/server.ts",
-    "cron": "ts-node --esm api/cron.ts"
+    "cron": "ts-node --esm api/cron.ts",
+    "sst:dev": "sst dev",
+    "sst:deploy": "sst deploy",
+    "sst:remove": "sst remove"
   },
   "keywords": [
     "astro",
@@ -27,14 +30,15 @@
     "@astrojs/vercel": "^8.1.3",
     "@hono/node-server": "^1.14.1",
     "astro": "^5.7.2",
+    "better-sqlite3": "^9.5.0",
     "effect": "^2.0.0",
     "hono": "^4.7.7",
-    "telegram": "^2.18.38",
     "input": "^1.0.1",
-    "better-sqlite3": "^9.5.0"
+    "telegram": "^2.18.38"
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "sst": "^3.13.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
